<resources>
    <string name="app_name">Lab 4</string>
    <string name="nav_header_title">Temirlan Kassymkul</string>
    <string name="nav_header_subtitle">timporello@gmail.com</string>

    <string name="menu_option_1">Option 1</string>
    <string name="menu_option_2">Option 2</string>
    <string name="menu_option_3">Option 3</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_likes">Likes</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
</resources>